--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
 			"value": "",
 			"title": "Image File Path",
 			"description": "A path to an image on your computer that the dock icon should be set to"
+		},
+		{
+			"name": "restoreDefault",
+			"type": "control",
+			"title": "Restore Default",
+			"description": "If you have changed your icon, and want to restore the default Firefox icon, click this button",
+			"label": "Restore"
 		}
 	]
 }
