--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"title": "OS X Dock Icon Changer",
 	"name": "os-x-dock-icon-changer",
-	"version": "1.1",
+	"version": "1.2-night",
 	"description": "Allows you to set a custom icon for your Firefox in you Mac OS X dock.",
 	"main": "index.js",
 	"author": "Noitidart",
